iptables-rules.txt
# Generated by iptables-save v1.8.10 (nf_tables) on Tue Apr 29 04:14:42 2025
*filter
:INPUT ACCEPT [259:343977]
:FORWARD ACCEPT [3719:9946805]
:OUTPUT ACCEPT [270:24810]
:ufw-after-forward - [0:0]
:ufw-after-input - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-output - [0:0]
:ufw-before-forward - [0:0]
:ufw-before-input - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-output - [0:0]
:ufw-reject-forward - [0:0]
:ufw-reject-input - [0:0]
:ufw-reject-output - [0:0]
:ufw-track-forward - [0:0]
:ufw-track-input - [0:0]
:ufw-track-output - [0:0]
-A INPUT -j ufw-before-logging-input
-A INPUT -j ufw-before-input
-A INPUT -j ufw-after-input
-A INPUT -j ufw-after-logging-input
-A INPUT -j ufw-reject-input
-A INPUT -j ufw-track-input
-A FORWARD -j ufw-before-logging-forward
-A FORWARD -j ufw-before-forward
-A FORWARD -j ufw-after-forward
-A FORWARD -j ufw-after-logging-forward
-A FORWARD -j ufw-reject-forward
-A FORWARD -j ufw-track-forward
-A OUTPUT -j ufw-before-logging-output
-A OUTPUT -j ufw-before-output
-A OUTPUT -j ufw-after-output
-A OUTPUT -j ufw-after-logging-output
-A OUTPUT -j ufw-reject-output
-A OUTPUT -j ufw-track-output
COMMIT
# Completed on Tue Apr 29 04:14:42 2025
# Generated by iptables-save v1.8.10 (nf_tables) on Tue Apr 29 04:14:42 2025
*nat
:PREROUTING ACCEPT [106:8144]
:INPUT ACCEPT [3:702]
:OUTPUT ACCEPT [74:5844]
:POSTROUTING ACCEPT [26:2231]
-A POSTROUTING -o enp0s3 -j MASQUERADE
COMMIT
# Completed on Tue Apr 29 04:14:42 2025
